--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,13 @@
 @import "tailwindcss";
 : root {
 }
+/* Hide scrollbar for WebKit (Chrome, Safari) */
+.scroll-hidden::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for Firefox */
+.scroll-hidden {
+  scrollbar-width: none;
+  -ms-overflow-style: none; /* IE 10+ */
+}
