--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,3 +11,21 @@
   scrollbar-width: none;
   -ms-overflow-style: none; /* IE 10+ */
 }
+body {
+  background: linear-gradient(to right, #fecaca, #fbcfe8, #f472b6);
+}
+@keyframes bubble {
+  0%,
+  100% {
+    transform: scale(1);
+    opacity: 0.8;
+  }
+  50% {
+    transform: scale(1.3);
+    opacity: 1;
+  }
+}
+
+.animate-bubble {
+  animation: bubble 1s infinite ease-in-out;
+}
